--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - osm-tileserver-db:/var/lib/postgresql/12/main
       - osm-tileserver-nodes:/nodes
       - osm-tileserver-tiles:/var/lib/mod_tile
+      - osm-tileserver-logs:/var/log
       - ${PWD}/cfg/postgresql.serve.conf.tmpl:/etc/postgresql/12/main/postgresql.custom.conf.tmpl
       - ${PWD}/scripts/render_list_geo.pl:/usr/bin/render_list_geo
     environment:
@@ -31,3 +32,4 @@ volumes:
   osm-tileserver-db: {}
   osm-tileserver-nodes: {}
   osm-tileserver-tiles: {}
+  osm-tileserver-logs: {}
