--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,11 @@ services:
       - osm-tileserver-nodes:/nodes
       - osm-tileserver-tiles:/var/lib/mod_tile
       - osm-tileserver-logs:/var/log
+      # Sample host paths:
+      # - /data/osm/tileserver/db:/var/lib/postgresql
+      # - /data/osm/tileserver/nodes:/nodes
+      # - /data/osm/tileserver/tiles:/var/lib/mod_tile
+      # - /data/osm/tileserver/logs:/var/log
       - ./cfg/postgresql.serve.conf.tmpl:/etc/postgresql/current/main/postgresql.custom.conf.tmpl
       - ./scripts/render_list_geo.pl:/usr/bin/render_list_geo
     environment:
