--- a/docker-compose.import.yml
+++ b/docker-compose.import.yml
@@ -6,9 +6,14 @@ services:
   map:
     volumes:
       - ./cfg/postgresql.import.conf.tmpl:/etc/postgresql/current/main/postgresql.custom.conf.tmpl
+      # Use the following if you don't want to download a file
+      # Your have to disable the DOWNLOAD_* variables below in order for this to take effect
+      # - /path/to/data.osm.pbf:/data.osm.pbf
+      # - /path/to//data.poly:/data.poly
     environment:
       - IMPORT_THREADS=8
       - OSM2PGSQL_EXTRA_ARGS=-C 8192 --flat-nodes /nodes/flat_nodes.bin
+      # Use the following entries to automatically download data files
       - DOWNLOAD_PBF=http://download.geofabrik.de/europe/andorra-latest.osm.pbf
       - DOWNLOAD_POLY=http://download.geofabrik.de/europe/andorra.poly
     shm_size: 16G
