--- a/docker-compose.import.yml
+++ b/docker-compose.import.yml
@@ -9,7 +9,7 @@ services:
       # Use the following if you don't want to download a file
       # Your have to disable the DOWNLOAD_* variables below in order for this to take effect
       - /path/to/data.osm.pbf:/data.osm.pbf
-      - /path/to//data.poly:/data.poly
+      - /path/to/data.poly:/data.poly
     environment:
       - IMPORT_THREADS=8
       - OSM2PGSQL_EXTRA_ARGS=-C 8192 --flat-nodes /nodes/flat_nodes.bin
