--- a/docker-compose.prerender.yml
+++ b/docker-compose.prerender.yml
@@ -9,5 +9,7 @@ services:
       - ./scripts/render_list_geo.pl:/usr/bin/render_list_geo
     environment:
       - RENDER_THREADS=4
-      - OSM2PGSQL_EXTRA_ARGS=-C 4096 --flat-nodes /nodes/flat_nodes.bin
-    shm_size: 16G
+      - FLAT_NODES=enabled
+      # However you may change the memory usage (-C)
+      - OSM2PGSQL_EXTRA_ARGS=-C 8192
+    shm_size: '16g'
